--- a/index.html
+++ b/index.html
@@ -1,198 +1,15 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Malla Interactiva UNAHUR</title>
-<style>
-  /* Tipografía moderna */
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-  body {
-    font-family: 'Montserrat', sans-serif;
-    background: linear-gradient(135deg, #d8c3fc, #b892ff);
-    margin: 0;
-    padding: 20px;
-    color: #222;
-  }
-  h1 {
-    text-align: center;
-    color: #4b3b97;
-  }
-  .year-container {
-    margin: 20px auto;
-    max-width: 600px;
-    border-radius: 10px;
-    padding: 15px 20px;
-    color: white;
-  }
-  /* Colores por año */
-  .year-1 {
-    background-color: #c6b9f2; /* lila claro */
-  }
-  .year-2 {
-    background-color: #6e54c8; /* violeta oscuro */
-  }
-  .year-title {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-    text-align: center;
-    text-shadow: 0 0 5px rgba(0,0,0,0.3);
-  }
-  .subject {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: rgba(255 255 255 / 0.3);
-    margin: 8px 0;
-    border-radius: 6px;
-    padding: 8px 12px;
-  }
-  .subject.tachado {
-    text-decoration: line-through;
-    opacity: 0.6;
-  }
-  .subject-name {
-    flex-grow: 1;
-    font-weight: 600;
-  }
-  input.note {
-    width: 50px;
-    border-radius: 4px;
-    border: none;
-    padding: 5px;
-    font-weight: 600;
-    text-align: center;
-    font-size: 1rem;
-  }
-  input.note.aprobado {
-    background-color: #a0e6a0;
-    color: #1a6b1a;
-  }
-  input.note.desaprobado {
-    background-color: #f7a1a1;
-    color: #7a1a1a;
-  }
-  button.toggle-tachado {
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-size: 1.3rem;
-    color: #fff;
-    margin-right: 10px;
-    user-select: none;
-  }
-  button.toggle-tachado:hover {
-    color: #333;
-  }
-</style>
-</head>
-<body>
-
-<h1>Malla Interactiva UNAHUR</h1>
-
-<div class="year-container year-1" data-year="1">
-  <div class="year-title">Año 1</div>
-  <div class="subject" data-id="matematica">
-    <button class="toggle-tachado" title="Marcar como aprobado">✔️</button>
-    <div class="subject-name">Matemática</div>
-    <input type="number" class="note" min="0" max="10" placeholder="Nota" />
-  </div>
-  <div class="subject" data-id="biologia">
-    <button class="toggle-tachado" title="Marcar como aprobado">✔️</button>
-    <div class="subject-name">Biología</div>
-    <input type="number" class="note" min="0" max="10" placeholder="Nota" />
-  </div>
-  <div class="subject" data-id="quimica">
-    <button class="toggle-tachado" title="Marcar como aprobado">✔️</button>
-    <div class="subject-name">Química</div>
-    <input type="number" class="note" min="0" max="10" placeholder="Nota" />
-  </div>
-</div>
-
-<div class="year-container year-2" data-year="2">
-  <div class="year-title">Año 2</div>
-  <div class="subject" data-id="genetica">
-    <button class="toggle-tachado" title="Marcar como aprobado">✔️</button>
-    <div class="subject-name">Genética</div>
-    <input type="number" class="note" min="0" max="10" placeholder="Nota" />
-  </div>
-  <div class="subject" data-id="ecologia">
-    <button class="toggle-tachado" title="Marcar como aprobado">✔️</button>
-    <div class="subject-name">Ecología</div>
-    <input type="number" class="note" min="0" max="10" placeholder="Nota" />
-  </div>
-  <div class="subject" data-id="microbiologia">
-    <button class="toggle-tachado" title="Marcar como aprobado">✔️</button>
-    <div class="subject-name">Microbiología</div>
-    <input type="number" class="note" min="0" max="10" placeholder="Nota" />
-  </div>
-</div>
-
-<script>
-  // Función para cargar datos guardados
-  function cargarDatos() {
-    const subjects = document.querySelectorAll('.subject');
-    subjects.forEach(sub => {
-      const id = sub.dataset.id;
-      // Cargar tachado
-      const tachado = localStorage.getItem(id + '-tachado');
-      if (tachado === 'true') {
-        sub.classList.add('tachado');
-      }
-      // Cargar nota
-      const nota = localStorage.getItem(id + '-nota');
-      if (nota !== null) {
-        const inputNota = sub.querySelector('input.note');
-        inputNota.value = nota;
-        actualizarColorNota(inputNota);
-      }
-    });
-  }
-
-  // Guardar estado
-  function guardarEstado(id, tachado, nota) {
-    localStorage.setItem(id + '-tachado', tachado);
-    localStorage.setItem(id + '-nota', nota);
-  }
-
-  // Actualizar color según nota
-  function actualizarColorNota(input) {
-    const val = Number(input.value);
-    input.classList.remove('aprobado', 'desaprobado');
-    if (!isNaN(val)) {
-      if (val >= 6) {
-        input.classList.add('aprobado');
-      } else {
-        input.classList.add('desaprobado');
-      }
-    }
-  }
-
-  document.querySelectorAll('.toggle-tachado').forEach(btn => {
-    btn.addEventListener('click', () => {
-      const subject = btn.parentElement;
-      subject.classList.toggle('tachado');
-      const id = subject.dataset.id;
-      const tachado = subject.classList.contains('tachado');
-      const notaInput = subject.querySelector('input.note').value;
-      guardarEstado(id, tachado, notaInput);
-    });
-  });
-
-  document.querySelectorAll('input.note').forEach(input => {
-    input.addEventListener('input', () => {
-      const subject = input.parentElement;
-      const id = subject.dataset.id;
-      const tachado = subject.classList.contains('tachado');
-      const nota = input.value;
-      actualizarColorNota(input);
-      guardarEstado(id, tachado, nota);
-    });
-  });
-
-  // Cargar datos al iniciar
-  window.onload = cargarDatos;
-</script>
-
-</body>
-</html>
+function iconoParaMateria(nombre) {
+  if (nombre.toLowerCase().includes("matemática")) return '<i class="fas fa-square-root-alt icono"></i>';
+  if (nombre.toLowerCase().includes("lógica")) return '<i class="fas fa-brain icono"></i>';
+  if (nombre.toLowerCase().includes("computadoras") || nombre.toLowerCase().includes("arquitectura")) return '<i class="fas fa-microchip icono"></i>';
+  if (nombre.toLowerCase().includes("programación")) return '<i class="fas fa-laptop-code icono"></i>';
+  if (nombre.toLowerCase().includes("estructuras")) return '<i class="fas fa-sitemap icono"></i>';
+  if (nombre.toLowerCase().includes("web") || nombre.toLowerCase().includes("marcado")) return '<i class="fas fa-globe icono"></i>';
+  if (nombre.toLowerCase().includes("interfaces")) return '<i class="fas fa-desktop icono"></i>';
+  if (nombre.toLowerCase().includes("base") || nombre.toLowerCase().includes("persistencia")) return '<i class="fas fa-database icono"></i>';
+  if (nombre.toLowerCase().includes("ingeniería")) return '<i class="fas fa-cogs icono"></i>';
+  if (nombre.toLowerCase().includes("inglés")) return '<i class="fas fa-book icono"></i>';
+  if (nombre.toLowerCase().includes("electiva")) return '<i class="fas fa-asterisk icono"></i>';
+  if (nombre.toLowerCase().includes("materia unahur")) return '<i class="fas fa-university icono"></i>';
+  return '<i class="fas fa-book-reader icono"></i>';
+}
